# hematite-rs

./: .gitignore  Cargo.toml  capture.toml
capture/: Cargo.toml
capture/src/: logging.rs  main.rs  sun.rs
capture/src/capture/: dummy.rs  gphoto2.rs  mod.rs
capture/src/config/: general.rs  gps.rs  logging.rs  mod.rs  tracking.rs
capture/src/config/defaults/: general.toml  gps.toml  tracking.toml
capture/src/line/: mod.rs
capture/src/tracking/: driver.rs  mod.rs
common/: Cargo.toml
common/src/: lib.rs  processor.rs
common/src/capture/: filetype.rs  mod.rs
common/src/capture/settings/: dntime.rs  mod.rs
processor/: Cargo.toml
processor/src/: logging.rs  main.rs
processor/src/config/: general.rs  mod.rs
processor/src/config/defaults/: general.toml  logging.toml
profiles/: daytime.pp3  nighttime.pp3
