[package]
name = "capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common" }

thiserror = "1"

log = "0.4.17"
log4rs = "1.1.1"
log-panics = "2"

lazy_static = "1.4.0"
config_rs = { package = "config", version = "0.13" }

serde = { version = "1.0", features = ["derive"] }
bincode = "1"

futures = "0.3"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"

rand = "0.8"
uuid = { version = "1.1", features = ["v4", "serde"] }
url = "2.2"

chrono = "0.4.19"
sun = "0.2"

rppal = "0.13"