[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

size_format = "1.0"

lazy_static = "1"

serde = { version = "1", features = ["derive"] }

regex = "1"

uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }