[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

common = { path = "../common" }

size_format = "1.0"

thiserror = "1"

log = "0.4.17"
log4rs = "1.1.1"
log-panics = "2"

lazy_static = "1.4.0"

config_rs = { package = "config", version = "0.13" }

regex = "1"

serde = { version = "1.0", features = ["derive"] }
bincode = "1"

futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.17"

url = "2.2"
uuid = { version = "1.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }